[tool.poetry]
name = "tomodachi-rest"
version = "0.1.0"
description = ""
authors = ["snezhniy <72914371+snezhniy@users.noreply.github.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.9"
ujson = "^4.0.2"
gTTS = "^2.2.2"
Pillow = "^8.2.0"
more-itertools = "^8.7.0"
fastapi = "^0.65.1"
uvicorn = "^0.13.4"
pydantic = "^1.8.1"
no-blocking-io = "^0.0.3"
urllib3 = "^1.26.4"
databases = "^0.4.3"
asyncpg = "^0.22.0"
attrs = "^20.3.0"
idna = {version = "^3.1", optional = true}
uvloop = {version = "^0.15.2", optional = true}
psycopg2-binary = {version = "^2.8.6", optional = true}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
sqlalchemy-stubs = {version = "^0.4", optional = true}
mypy = "^0.812"
isort = {version = "^5.8.0", optional = true}

[tool.poetry.extras]
speed = ["uvloop"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
length_sort = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
